Fix the display issue on mobile

--- a/src/.vuepress/styles/index.scss
+++ b/src/.vuepress/styles/index.scss
@@ -3,3 +3,6 @@
     min-width: 136px !important;
   }
 }
+.blog-page {
+  width: inherit !important; 
+}
